--- a/examen02.css
+++ b/examen02.css
@@ -20,7 +20,9 @@ h1{
     margin:0;
 }
 main{
-    background: url("img/naranja2.svg") top repeat-x 5% 5%, url("img/naranja2.svg") bottom repeat-x 10% 10%;
+    background: url("img/naranja2.svg") top left repeat-x,url("img/naranja2.svg") bottom left repeat-x ;
+    background-size:10px 10px;
+    height: 70%;
 }
 /* Barra de navegación*/
 nav{
@@ -40,9 +42,7 @@ nav a{
     text-decoration:none;    
 }
 /* Estilo párrafos*/
-p{
-    padding:5%;
-}
+
 .sub{
     text-decoration:underline;
 }
@@ -53,14 +53,16 @@ p:hover{
 .estilo1{
     color:red;
     background:url("img/naranja.png") left repeat-y , orange url("img/naranja.png") right repeat-y;
-    background-size: 30% 25%;
-    width:30%;
-    height: 20%;
+    background-size: 20% 20%;
+    width:35%;
+    height: 15%;
     position:absolute;
     top:20%;
     left:30%;
     z-index:1;
     border:2px solid red;
+    padding:5%;
+    text-align: center;
 }
 /*Parrafo2*/
 .estilo2{
@@ -70,8 +72,12 @@ p:hover{
     width:30%;
     height: 20%;
     position:absolute;
-    bottom:15%;
+    bottom:20%;
     left:5%;
+    text-align: left;
+    letter-spacing: 5px;
+    padding-right: 5%;
+    padding-bottom:5%;
 }
 /*Parrafo3*/
 .estilo3{
@@ -81,35 +87,46 @@ p:hover{
     color:orange;
     border: 2px solid steelblue;
     position:absolute;
-    bottom:15%;
+    bottom:20%;
     right:5%;
+    text-align: right;
+    padding-left: 5%;
+    padding-bottom:5%;
+    
+}
+/* Section ventajas*/
+#ventajas{
+    margin-top:6%;
+    background-color: orange;
+    color:blue;
+    position:absolute;
+    bottom:5%;
+    height: 10%;
+    width: 100%;
+    padding:1%;
 
+}
+#ventajas li{
+    list-style-type: upper-roman; 
+    
 }
 /*Footer*/
 footer{
     position:absolute;
-    bottom:0;
-    height: 10%;
+    bottom:0%;
+    height: 5%;
     width: 100%;
     background-color: orange;
+    text-align: center;
+    z-index:1;
+    overflow: hidden;
+    display: block;
 }
-footer li{
-    list-style-type: upper-roman;
-    background-color: orange;
-    color:blue;
-    position:absolute;
-    bottom
-}
-footer p{
-    
-    color:blue;
-    padding:0.25%;
-    margin:0;
-}
+
 footer small{
     color:orange;
     background-color: wheat;
-   text-align: center;
+   
 }
 
 
